cmake_minimum_required(VERSION 3.7)
project(bc__)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        bc++simplecalc/main.cpp
        hello-world/main.cpp
        source_code/chap-01/new-project/src/hello_world.cpp
        source_code/chap-02/cmd-args/src/main.cpp
        source_code/chap-02/hello-world/main.cpp
        source_code/chap-03/calculator/src/main.cpp
        source_code/chap-03/temp-converter/src/fahrenheit_to_celcius.cpp
        source_code/chap-03/temp-converter/src/fahrenheit_to_celcius.h
        source_code/chap-03/temp-converter/src/temp-converter.cpp
        source_code/chap-03/temp-converter/tests/fahrenheit_celsius_test.hpp
        source_code/chap-03/temp-converter/tests/fahrenheit_to_celsius.hpp
        source_code/chap-03/temp-converter/tests/main.cpp
        source_code/chap-04/temp-conversion-gtest/src/temp_conversion.hpp
        source_code/chap-04/temp-conversion-gtest/test/main.cpp
        source_code/chap-04/temp-conversion-gtest/test/test_celsius_to_fahrenheit.hpp
        source_code/chap-04/temp-conversion-libunittest/src/temp_conversion.hpp
        source_code/chap-04/temp-conversion-libunittest/tests/celsius_to_fahrenheit_test.cpp
        source_code/chap-04/temp-conversion-unittest++/src/temp_conversion.hpp
        source_code/chap-04/temp-conversion-unittest++/tests/celsius_to_fahrenheit_test.hpp
        source_code/chap-04/temp-conversion-unittest++/tests/main.cpp
        source_code/chap-05/exercise/src/data.hpp
        source_code/chap-05/exercise/src/find.hpp
        source_code/chap-05/exercise/src/functions.hpp
        source_code/chap-05/exercise/src/main.cpp
        source_code/chap-05/exercise/tests/aggregate_test.hpp
        source_code/chap-05/exercise/tests/find_test.hpp
        source_code/chap-05/exercise/tests/main.cpp
        source_code/chap-06/exercise/src/data.hpp
        source_code/chap-06/exercise/src/find.hpp
        source_code/chap-06/exercise/src/functions.hpp
        source_code/chap-06/exercise/src/main.cpp
        source_code/chap-06/exercise/tests/find_test.hpp
        source_code/chap-06/exercise/tests/main.cpp
        source_code/chap-07/exercise/src/_model/_address.hpp
        source_code/chap-07/exercise/src/_model/_email_address.hpp
        source_code/chap-07/exercise/src/_model/_site.hpp
        source_code/chap-07/exercise/src/_model/_us_address.hpp
        source_code/chap-07/exercise/src/_model/_web_address.hpp
        source_code/chap-07/exercise/src/data.hpp
        source_code/chap-07/exercise/src/find.hpp
        source_code/chap-07/exercise/src/functions.hpp
        source_code/chap-07/exercise/src/main.cpp
        source_code/chap-07/exercise/src/model.hpp
        source_code/chap-08/exercise/src/_messaging/_message.hpp
        source_code/chap-08/exercise/src/_messaging/_message_builder.hpp
        source_code/chap-08/exercise/src/_messaging/_message_header.hpp
        source_code/chap-08/exercise/src/builder.hpp
        source_code/chap-08/exercise/src/generic_builder.hpp
        source_code/chap-08/exercise/src/int_list.hpp
        source_code/chap-08/exercise/src/list.hpp
        source_code/chap-08/exercise/src/main.cpp
        source_code/chap-08/exercise/src/messaging.hpp
        source_code/chap-08/exercise/tests/find_fx_test.hpp
        source_code/chap-08/exercise/tests/find_test.hpp
        source_code/chap-08/exercise/tests/generic_builder_test.hpp
        source_code/chap-08/exercise/tests/int_list_test.hpp
        source_code/chap-08/exercise/tests/list_double_test.hpp
        source_code/chap-08/exercise/tests/list_string_test.hpp
        source_code/chap-08/exercise/tests/list_test.hpp
        source_code/chap-08/exercise/tests/main.cpp
        source_code/chap-08/exercise/tests/template_fx_test.hpp
        source_code/chap-09/stl-algorithms/src/_model/_address.hpp
        source_code/chap-09/stl-algorithms/src/_model/_algorithm.hpp
        source_code/chap-09/stl-algorithms/src/_model/_email_address.hpp
        source_code/chap-09/stl-algorithms/src/_model/_site.hpp
        source_code/chap-09/stl-algorithms/src/_model/_us_address.hpp
        source_code/chap-09/stl-algorithms/src/_model/_web_address.hpp
        source_code/chap-09/stl-algorithms/src/data.hpp
        source_code/chap-09/stl-algorithms/src/find.hpp
        source_code/chap-09/stl-algorithms/src/functions.hpp
        source_code/chap-09/stl-algorithms/src/main.cpp
        source_code/chap-09/stl-algorithms/src/model.hpp
        source_code/chap-09/stl-containers/src/array_main.cpp
        source_code/chap-09/stl-containers/src/deque_main.cpp
        source_code/chap-09/stl-containers/src/map_main.cpp
        source_code/chap-09/stl-containers/src/queue_main.cpp
        source_code/chap-09/stl-containers/src/stack_main.cpp
        source_code/chap-09/stl-containers/src/vector_main.cpp
        source_code/chap-09/stl-containers/tests/main.cpp
        source_code/chap-09/stl-containers/tests/reverse_test.hpp
        source_code/chap-10/exceptions/src/main.cpp
        source_code/class-library/include/_fs/file_reader.hpp
        source_code/class-library/include/file_system.hpp
        source_code/class-library/include/string_utils.hpp
        source_code/class-library/include/utils.hpp)

add_executable(bc__ ${SOURCE_FILES})